hphp/hack/test/typecheck/lambda/hhvm_lambda8.php.like_types.exp
File "hhvm_lambda8.php", line 32, characters 5-24:
Wrong type hint (Typing[4110])
File "hhvm_lambda8.php", line 32, characters 5-24:
Expected (function(int): bool)
File "hhvm_lambda8.php", line 32, characters 5-24:
But got dynamic because it is an unenforceable type
File "hhvm_lambda8.php", line 33, characters 5-23:
Wrong type hint (Typing[4110])
File "hhvm_lambda8.php", line 33, characters 12-22:
Expected Vector<int>
File "hhvm_lambda8.php", line 33, characters 12-22:
Considering that this type argument is invariant with respect to Vector
File "hhvm_lambda8.php", line 33, characters 12-22:
But got dynamic because it is an unenforceable type
